--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,10 @@ dependencies {
 
     // xml 처리
     implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-xml"
+
+    // OAuth2 클라이언트 기능 포함 (소셜 로그인 등)
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
 }
 
 tasks.named('test') {
